2004-02-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-07  Dennis Cranston  <dennis_cranston at yahoo com>

	* capplets/display/main.c: (create_dialog): Fix alignment of Options
	category. (#133715).

2004-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=133214
	* acinclude.m4 : quote the AC_DEFUN as per patch from
	  alexander.winston@comcast.net

	http://bugzilla.gnome.org/show_bug.cgi?id=124064
	* configure.in : add a test for ngettext.  Used the same test as
	  gnome-vfs for consitency.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-13  Jody Goldberg <jody@gnome.org>

	* schemas/Makefile.am : handle builddir != srcdir

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* capplets/display/main.c: (cb_dialog_response):
	* capplets/localization/gnome-localization-properties.c:
	(dialog_response): update help links to point to user-guide.xml

2004-02-06  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* capplets/font/main.c: (sample_expose):
	* gnome-settings-daemon/gnome-settings-gtk1theme.c:
	(apply_settings):
	* vfs-methods/themus/theme-method.c:
	64bits fixes.

2004-02-03  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in, capplets/Makefile.am: Removed the localization capplet
	references, it will wait until GNOME 2.7, it's too late for GNOME 2.6.

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* schemas/Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-14  Jody Goldberg <jody@gnome.org>

	* configure.in : post release bump

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-14  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Change the labels for a couple of keys, make them more of the style
	of the current ones

2004-01-08  Carlos Perelló Marín <carlos@gnome.org>
