@@ -272,7 +272,7 @@ fi
 AM_GCONF_SOURCE_2
 
 dnl ==============================================
-dnl OSS and FB Level section
+dnl OSS section
 dnl ==============================================
 have_oss=no
 AC_TRY_COMPILE([
@@ -290,14 +290,59 @@ AC_MSG_CHECKING(for OSS audio support)
 AC_MSG_RESULT($have_oss)
 AM_CONDITIONAL(HAVE_OSS, test x"$have_oss" = "xyes")
 
+dnl ==============================================
+dnl ALSA section
+dnl ==============================================
 have_alsa=no
-PKG_CHECK_MODULES(ALSA, alsa >= 0.9.0,
-	have_alsa=yes,
-	AC_MSG_RESULT(*** All of ALSA dependent parts will be disabled ***))
+AC_ARG_ENABLE(alsa,
+       AC_HELP_STRING([--disable-alsa],[Turn off support for ALSA version 0.9 or higher]),
+       [case "${enableval}" in
+               yes) WANT_ALSA=yes ;;
+               no)  WANT_ALSA=no ;;
+               *) AC_MSG_ERROR(bad value ${enableval} for --enable-alsa) ;;
+       esac],
+       [WANT_ALSA=yes]) dnl Default value
+
+if test x$WANT_ALSA = xyes ; then
+       PKG_CHECK_MODULES(ALSA, alsa >= 0.9.0,
+               have_alsa=yes,
+               AC_MSG_RESULT(*** All of ALSA dependent parts will be disabled ***))
+else
+       have_alsa=no
+fi
+
 AM_CONDITIONAL(HAVE_ALSA, test x"$have_alsa" = "xyes")
 AC_SUBST(ALSA_LIBS)
 AC_SUBST(ALSA_CFLAGS)
 
+dnl ==============================================
+dnl GStreamer section
+dnl ==============================================
+AC_ARG_ENABLE(gstreamer,
+AC_HELP_STRING([--enable-gstreamer],[use gstreamer, if available]),
+[case "${enableval}" in
+ yes) ENABLE_GSTREAMER=yes ;;
+ no)  ENABLE_GSTREAMER=no ;;
+ *) AC_MSG_ERROR(bad value ${enableval} for --enable-gstreamer) ;;
+esac],
+[ENABLE_GSTREAMER=yes]) dnl Default value
+
+if test "x$ENABLE_GSTREAMER" = "xyes"; then
+   have_gstreamer=no
+   PKG_CHECK_MODULES(GST, gstreamer-interfaces-0.7 >= 0.7.3.1,
+		   have_gstreamer=yes,
+		   AC_MSG_RESULT(*** All of GStreamer dependent parts will be disabled ***))
+else
+   have_gstreamer=disabled
+   AC_MSG_RESULT(*** GStreamer has been explicitly disabled ***)
+fi
+AM_CONDITIONAL(HAVE_GSTREAMER, test x"$have_gstreamer" = "xyes")
+AC_SUBST(GST_LIBS)
+AC_SUBST(GST_CFLAGS)
+
+dnl ==============================================
+dnl FB Level section
+dnl ==============================================
 have_fb=no
 AC_TRY_COMPILE([
 	#include <linux/fb.h>
