@@ -1,3 +1,8 @@
+2004-02-25  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in: check for GStreamer, make it possible to disable
+	ALSA support even if the libraries are there
+
 2004-02-21  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "en_CA" to ALL_LINGUAS.
